@@ -1,4 +1,5 @@
 from winchester.db.interface import DuplicateError, LockError
+from winchester.db.interface import NoSuchEventError, NoSuchStreamError
 from winchester.db.interface import DBInterface
 
 
